fixed offset (post-search for pokemon- endpoints)
