# api/swagger.yml
@@ -314,8 +314,20 @@ paths:
       tags:
       - collection
       summary: search for pokemon in collection by filter
-      operationId: searchPokemon
+      operationId: postSearchPokemonInCollection
       parameters:
+      - maximum: 20
+        type: integer
+        default: 10
+        description: number of pokemon to return per page
+        name: limit
+        in: query
+      - minimum: 0
+        type: integer
+        default: 0
+        description: number of pokemon to skip before returning results
+        name: offset
+        in: query
       - name: body
         in: body
         schema:
@@ -423,8 +435,20 @@ paths:
       tags:
       - pokemon
       summary: search for pokemon in collection by filter
-      operationId: searchPokemonMixin3
+      operationId: postSearchPokemon
       parameters:
+      - maximum: 20
+        type: integer
+        default: 10
+        description: number of pokemon to return per page
+        name: limit
+        in: query
+      - minimum: 0
+        type: integer
+        default: 0
+        description: number of pokemon to skip before returning results
+        name: offset
+        in: query
       - name: body
         in: body
         schema:
@@ -1016,21 +1040,22 @@ definitions:
       attack:
         description: filter by attack
         type: integer
+        minimum: 0
         example: 60
       defense:
         description: filter by defense
         type: integer
+        minimum: 0
         example: 40
       hp:
         description: filter by hp
         type: integer
+        minimum: 0
         example: 50
       name:
         description: filter by pokemon name
         type: string
         example: Bulbasaur
-      pagination:
-        $ref: '#/definitions/pagination'
       sortOrder:
         description: sort order for results
         type: string
@@ -1041,10 +1066,12 @@ definitions:
       special:
         description: filter by special stat
         type: integer
+        minimum: 0
         example: 65
       speed:
         description: filter by speed
         type: integer
+        minimum: 0
         example: 45
       type:
         description: filter by type
