# internal/api/handlers/pokemon/post_search_pokemon.go
@@ -1,12 +1,14 @@
 package pokemon
 
 import (
+	"fmt"
 	"net/http"
 	"strings"
 
 	"github.com/ansiegl/Pok-Nest.git/internal/api"
 	"github.com/ansiegl/Pok-Nest.git/internal/models"
 	"github.com/ansiegl/Pok-Nest.git/internal/types"
+	"github.com/ansiegl/Pok-Nest.git/internal/types/pokemon"
 	"github.com/ansiegl/Pok-Nest.git/internal/util"
 	"github.com/go-openapi/strfmt"
 	"github.com/labstack/echo/v4"
@@ -22,6 +24,12 @@ func postSearchPokemonHandler(s *api.Server) echo.HandlerFunc {
 		ctx := c.Request().Context()
 		log := util.LogFromContext(ctx)
 
+		params := pokemon.NewPostSearchPokemonParams()
+		err := util.BindAndValidatePathAndQueryParams(c, &params)
+		if err != nil {
+			return err
+		}
+
 		var searchRequest types.PokemonSearchRequest
 		if err := c.Bind(&searchRequest); err != nil {
 			log.Err(err).Msg("Failed to bind request body")
@@ -31,53 +39,67 @@ func postSearchPokemonHandler(s *api.Server) echo.HandlerFunc {
 		queryMods := []qm.QueryMod{}
 
 		if searchRequest.Name != "" {
-			queryMods = append(queryMods, qm.Where("name LIKE ?", "%"+searchRequest.Name+"%"))
+			queryMods = append(queryMods,
+				qm.Where(fmt.Sprintf("%s LIKE ?", models.PokemonTableColumns.Name), "%"+searchRequest.Name+"%"),
+			)
 		}
 		if searchRequest.Type != "" {
-			queryMods = append(queryMods, qm.Where("type_1 = ? OR type_2 = ?", searchRequest.Type, searchRequest.Type))
+			queryMods = append(queryMods,
+				qm.Where(fmt.Sprintf("(%s = ? OR %s = ?)",
+					models.PokemonTableColumns.Type1, models.PokemonTableColumns.Type2,
+				), searchRequest.Type, searchRequest.Type),
+			)
 		}
-		if searchRequest.Hp > 0 {
-			queryMods = append(queryMods, qm.Where("hp >= ?", searchRequest.Hp))
+		if searchRequest.Hp != nil && *searchRequest.Hp > 0 {
+			queryMods = append(queryMods,
+				qm.Where(fmt.Sprintf("%s >= ?", models.PokemonTableColumns.HP), *searchRequest.Hp),
+			)
 		}
-		if searchRequest.Attack > 0 {
-			queryMods = append(queryMods, qm.Where("attack >= ?", searchRequest.Attack))
+		if searchRequest.Attack != nil && *searchRequest.Attack > 0 {
+			queryMods = append(queryMods,
+				qm.Where(fmt.Sprintf("%s >= ?", models.PokemonTableColumns.Attack), *searchRequest.Attack),
+			)
 		}
-		if searchRequest.Defense > 0 {
-			queryMods = append(queryMods, qm.Where("defense >= ?", searchRequest.Defense))
+		if searchRequest.Defense != nil && *searchRequest.Defense > 0 {
+			queryMods = append(queryMods,
+				qm.Where(fmt.Sprintf("%s >= ?", models.PokemonTableColumns.Defense), *searchRequest.Defense),
+			)
 		}
-		if searchRequest.Speed > 0 {
-			queryMods = append(queryMods, qm.Where("speed >= ?", searchRequest.Speed))
+		if searchRequest.Speed != nil && *searchRequest.Speed > 0 {
+			queryMods = append(queryMods,
+				qm.Where(fmt.Sprintf("%s >= ?", models.PokemonTableColumns.Speed), *searchRequest.Speed),
+			)
 		}
-		if searchRequest.Special > 0 {
-			queryMods = append(queryMods, qm.Where("special >= ?", searchRequest.Special))
+		if searchRequest.Special != nil && *searchRequest.Special > 0 {
+			queryMods = append(queryMods,
+				qm.Where(fmt.Sprintf("%s >= ?", models.PokemonTableColumns.Special), *searchRequest.Special),
+			)
 		}
 		if searchRequest.SortOrder != "" {
+			orderCol := models.PokemonTableColumns.Name
 			if strings.ToLower(searchRequest.SortOrder) == "asc" {
-				queryMods = append(queryMods, qm.OrderBy("name ASC"))
+				queryMods = append(queryMods, qm.OrderBy(orderCol+" ASC"))
 			} else if strings.ToLower(searchRequest.SortOrder) == "desc" {
-				queryMods = append(queryMods, qm.OrderBy("name DESC"))
+				queryMods = append(queryMods, qm.OrderBy(orderCol+" DESC"))
 			}
 		}
-
-		limit := 10
-		offset := 0
-
-		if searchRequest.Pagination != nil {
-			if searchRequest.Pagination.Limit > 0 {
-				limit = int(searchRequest.Pagination.Limit)
-			}
-			if searchRequest.Pagination.Offset > 0 {
-				offset = int(searchRequest.Pagination.Offset)
-			}
-		}
-
-		queryMods = append(queryMods, qm.Limit(limit), qm.Offset(offset))
 
 		totalCount, err := models.Pokemons(queryMods...).Count(ctx, s.DB)
 		if err != nil {
 			log.Err(err).Msg("Failed to get total count of pokemon")
 			return err
 		}
+
+		limit := 10
+		if params.Limit != nil {
+			limit = int(*params.Limit)
+		}
+		offset := 0
+		if params.Offset != nil {
+			offset = int(*params.Offset)
+		}
+
+		queryMods = append(queryMods, qm.Limit(limit), qm.Offset(offset))
 
 		pokemons, err := models.Pokemons(queryMods...).All(ctx, s.DB)
 		if err != nil {
@@ -105,15 +127,12 @@ func postSearchPokemonHandler(s *api.Server) echo.HandlerFunc {
 			})
 		}
 
-		tempLimit := int64(limit)
-		tempOffset := int64(offset)
-
 		response := &types.GetPokemonResponse{
 			Data: pokemonData,
 			Pagination: &types.Pagination{
 				Total:  totalCount,
-				Limit:  tempLimit,
-				Offset: tempOffset,
+				Limit:  int64(limit),
+				Offset: int64(offset),
 			},
 		}
 
