# internal/types/collection/search_pokemon_parameters.go
@@ -1,87 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package collection
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/runtime"
-	"github.com/go-openapi/runtime/middleware"
-	"github.com/go-openapi/strfmt"
-
-	"github.com/ansiegl/Pok-Nest.git/internal/types"
-)
-
-// NewSearchPokemonParams creates a new SearchPokemonParams object
-// no default values defined in spec.
-func NewSearchPokemonParams() SearchPokemonParams {
-
-	return SearchPokemonParams{}
-}
-
-// SearchPokemonParams contains all the bound params for the search pokemon operation
-// typically these are obtained from a http.Request
-//
-// swagger:parameters searchPokemon
-type SearchPokemonParams struct {
-
-	// HTTP Request Object
-	HTTPRequest *http.Request `json:"-"`
-
-	/*
-	  In: body
-	*/
-	Body *types.PokemonSearchRequest
-}
-
-// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
-// for simple values it will use straight method calls.
-//
-// To ensure default values, the struct must have been initialized with NewSearchPokemonParams() beforehand.
-func (o *SearchPokemonParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
-	var res []error
-
-	o.HTTPRequest = r
-
-	if runtime.HasBody(r) {
-		defer r.Body.Close()
-		var body types.PokemonSearchRequest
-		if err := route.Consumer.Consume(r.Body, &body); err != nil {
-			res = append(res, errors.NewParseError("body", "body", "", err))
-		} else {
-			// validate body object
-			if err := body.Validate(route.Formats); err != nil {
-				res = append(res, err)
-			}
-
-			if len(res) == 0 {
-				o.Body = &body
-			}
-		}
-	}
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (o *SearchPokemonParams) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	// body
-	// Required: false
-
-	// body is validated in endpoint
-	//if err := o.Body.Validate(formats); err != nil {
-	//  res = append(res, err)
-	//}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
